Add preprocessed tensor data files
Added tensor_test.pt, tensor_train.pt, and tensor_val.pt to Part3/data_preprocessed. Updated .gitignore to exclude tensor_test.pt from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+Part3/data_preprocessed/tensor_test.pt
